Making things return CompletableFutures and not blocking the calling thread. Still blocking I/O though since I don't want to write everything from scratch